Full View Implementation
Some detailed bugs need to be fixed/reviewed but general implementation is finished.

Co-Authored-By: phamamy <129318964+phamamy@users.noreply.github.com>